[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scanner"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
shared = {path = "../shared"}
networking.workspace = true
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"]}
